Sets up webpacker dev server
- has error but seems to be working anyway ...

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -9,4 +9,4 @@
   <%#= todo.reminders.first.scheduled_for_date %>
   <%#= todo.reminders.first.scheduled_for_time %>
 <%  end %>
-<h1 class="text-gray-300">Test</h1>
+<h1 class="text-gray-300 font-mono">Test test butt</h1>
