--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -2,7 +2,10 @@
   <h1 class="font-inter font-bold text-xl mb-4">Todos</h1>
   <% @incomplete_todos.each do |todo| %>
     <div class="border-gray-200 border-2 rounded-lg mb-4 p-2 pl-4 pr-4">
-      <p><%= todo.body %></p>
+      <label>
+        <span><%= todo.body %></span>
+        <input type="checkbox" name="todo" value="<%= todo.id %>" class="float-right text-green-500" checked>
+      </label>
       <%#= todo.reminders.first.scheduled_for_date %>
       <%#= todo.reminders.first.scheduled_for_time %>
     </div>
